--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.14.1",
+    "@prisma/client": "^5.16.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^1.7.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prisma": "^5.16.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
