--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^4.19.2",
     "http-status": "^1.7.4",
     "morgan": "^1.10.0",
-    "prisma": "^5.16.1"
+    "prisma": "^5.16.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
